--- a/Marketplace_OA/Views/Product/ProductDetail.cshtml
+++ b/Marketplace_OA/Views/Product/ProductDetail.cshtml
@@ -1,38 +1,74 @@
-﻿﻿@model IEnumerable<Marketplace_OA.Models.ProductAttributesVM>
-
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "ProductDetail";
+    Layout = "~/Views/Shared/_ProductDetailLayout.cshtml";
+    var productList = ViewBag.ProductAttributes as List<Marketplace_OA.Models.ProductAttributesVM>;
 }
 
-<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Search product", "Search")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ProductsID)
-            @Html.DisplayNameFor(model => model.AttributesID)
-            @Html.DisplayNameFor(model => model.Attribute_Name)
-            @Html.DisplayNameFor(model => model.Attribute_Value_ID)
-            @Html.DisplayNameFor(model => model.Attribute_Value)
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductsID)
-                @Html.DisplayFor(modelItem => item.AttributesID)
-                @Html.DisplayFor(modelItem => item.Attribute_Name)
-                @Html.DisplayFor(modelItem => item.Attribute_Value_ID)
-                @Html.DisplayFor(modelItem => item.Attribute_Value)
-            </td>
-        </tr>
-    }
 
-</table>
+
+<div class="container">
+    <h2>Product Summary</h2>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <!-- Table for product description -->
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th>DESCRIPTION</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th class="table-secondary custom-th-width">Description</th>
+                        <td>@ViewBag.Product["Description"]</td>
+                    </tr>
+                </tbody>
+
+            </table>
+            <!-- Table for text attributes -->
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th>TYPE</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in productList.Where(a => a.Value_Type == "Text"))
+                    {
+                        <tr>
+                            <th class="table-secondary custom-th-width">@Html.DisplayFor(_ => item.Attribute_Name)</th>
+                            <td>@Html.DisplayFor(_ => item.Attribute_Value)</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-sm-6">
+            <!-- Table for number attributes -->
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th>TECH SPECIFICATION</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in productList.Where(a => a.Value_Type == "Number"))
+                    {
+                        <tr>
+                            <th class="table-secondary custom-th-width">@Html.DisplayFor(_ => item.Attribute_Name)</th>
+                            <td>@Html.DisplayFor(_ => item.Attribute_Value)</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
