--- a/Marketplace_OA/Views/Product/ProductDetail.cshtml
+++ b/Marketplace_OA/Views/Product/ProductDetail.cshtml
@@ -1,23 +1,21 @@
 ﻿@{
     ViewBag.Title = "ProductDetail";
-    Layout = "~/Views/Shared/_ProductDetailLayout.cshtml";
+    Layout = "~/Views/Shared/_ProductLayout.cshtml";
     var productList = ViewBag.ProductAttributes as List<Marketplace_OA.Models.ProductAttributesVM>;
+    var productValues = ViewBag.ProductDetail as List<Marketplace_OA.Models.ProductAttributeDetailVM>;
 }
 
-
-<p>
-    @Html.ActionLink("Search product", "Search")
-</p>
+@Html.Partial("_ProductPartialView")
 
 
 
-<div class="container">
+<div class="container container3">
     <h2>Product Summary</h2>
 
     <div class="row">
         <div class="col-sm-6">
             <!-- Table for product description -->
-            <table class="table table-borderless">
+            <table class="table">
                 <thead>
                     <tr>
                         <th>DESCRIPTION</th>
@@ -26,13 +24,13 @@
                 <tbody>
                     <tr>
                         <th class="table-secondary custom-th-width">Description</th>
-                        <td>@ViewBag.Product["Description"]</td>
+                        <td>@productValues.First().Description</td>
                     </tr>
                 </tbody>
 
             </table>
             <!-- Table for text attributes -->
-            <table class="table table-borderless">
+            <table class="table">
                 <thead>
                     <tr>
                         <th>TYPE</th>
@@ -52,7 +50,7 @@
 
         <div class="col-sm-6">
             <!-- Table for number attributes -->
-            <table class="table table-borderless">
+            <table class="table">
                 <thead>
                     <tr>
                         <th>TECH SPECIFICATION</th>
@@ -69,6 +67,12 @@
                 </tbody>
             </table>
         </div>
+    </div>
+    <div>
+        <a href="@Url.Action("ProductList", "Product", new { mainCategory=ViewBag.mainCategory, subCategory=ViewBag.subCategory, subCategoryId=ViewBag.subCategoryId })"
+           class="btn btn-info">
+            Go to List
+        </a>
     </div>
 </div>
 
