edit for product part

--- a/Marketplace_OA/Views/Product/Search.cshtml
+++ b/Marketplace_OA/Views/Product/Search.cshtml
@@ -52,7 +52,7 @@
     <!-- jQuery and jQuery UI JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <!-- Popper.js (Add this before Bootstrap JS) -->
+    <!-- Popper.js  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <!-- Bootstrap JS -->
