--- a/Marketplace_OA/Views/Product/_ProductPartialView.cshtml
+++ b/Marketplace_OA/Views/Product/_ProductPartialView.cshtml
@@ -15,7 +15,7 @@
             </h1>
         </div>
 
-        <div class="container container-search-box col-7">
+        <div class="container container-search-box col-8">
             <div class="row">
                 <form action="/Product/Search" method="post" id="searchForm">
 
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div class="col-3">
+        <div class="col-2">
 
         </div>
     </div>
@@ -56,7 +56,7 @@
     <!-- jQuery and jQuery UI JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <!-- Popper.js (Add this before Bootstrap JS) -->
+    <!-- Popper.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <!-- Bootstrap JS -->
