--- a/Marketplace_OA/Views/Shared/_ProductLayout.cshtml
+++ b/Marketplace_OA/Views/Shared/_ProductLayout.cshtml
@@ -104,6 +104,60 @@
             border: none;
             border-radius: 5px;
         }
+
+        .search-input {
+            width: 80px;
+        }
+
+        /*style for ProductList filter part*/
+        /* Styling for the range input background */
+        input[type='range'] {
+            -webkit-appearance: none;
+            width: 100%;
+            background: #e0e0e0;
+        }
+
+            /* Styling for the thumb */
+            input[type='range']::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                width: 1rem;
+                height: 1rem;
+                background: white;
+                border: 1px solid #999;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+
+            /* Styling for the track */
+            input[type='range']::-webkit-slider-runnable-track {
+                width: 100%;
+                height: 0.5rem;
+                cursor: pointer;
+                background: #e0e0e0;
+                border-radius: 3px;
+            }
+
+        /* Filter section background */
+        #filterForm {
+            background-color: #f5f5f5;
+            padding: 2rem
+        }
+
+
+        #filterButton, #clearButton {
+            margin: 5px;
+        }
+        /* style for filter section border*/
+        .filter-bordered-section {
+            border-bottom: 3px solid #dee2e6;
+        }
+
+        /* Media query for small screens */
+        @@media (max-width: 768px) {
+            .card-wrapper {
+                margin-left: 5em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -117,4 +171,3 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
-
