--- a/Marketplace_OA/Views/Product/Search.cshtml
+++ b/Marketplace_OA/Views/Product/Search.cshtml
@@ -1,5 +1,4 @@
 ﻿
-
 @{
     Layout = "~/Views/Shared/_SearchLayout.cshtml";
     ViewBag.Title = "Search";
@@ -30,9 +29,10 @@
                                 <a class="dropdown-item" href="#" data-category="C">Stationary</a>
                                 <a class="dropdown-item" href="#" data-category="D">Furniture</a>*@
                         </div>
-                        
+
                     </div>
                     <input type="text" class="form-control search-input" name="subCategory" id="SubCategory" placeholder="Search...">
+                    <input type="hidden" id="hiddenSubCategoryId" name="subCategoryId" />
                     <div class="input-group-append">
                         <button class="btn btn-primary search-btn" id="searchButton">
                             <i class="fas fa-search"></i>
@@ -58,66 +58,80 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap JS (Optional, if you need Bootstrap's JS components) -->
+    <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-            $(document).ready(function () {
+        $(document).ready(function () {
 
-                // Fetch main categories on page load
+            // Fetch main categories on page load
+            $.ajax({
+                url: '/Product/GetMainCategories',
+                type: 'GET',
+                dataType: 'json',
+                success: function (categories) {
+                    categories.forEach(function (category) {
+                        console.log(category.Main_Category_Name)
+                        var option = $('<a class="dropdown-item" href="#" data-category="' + category.MainCategoriesID + '">' + category.Main_Category_Name + '</a>');
+                        $(".dropdown-menu").append(option);
+                    });
+
+                    // Set the first main category as default
+                    var defaultMainCategory = $(".dropdown-menu .dropdown-item").first();
+                    defaultMainCategory.trigger('click');
+                }
+            });
+
+            // When main category is selected, fetch subcategories
+            $(document).on('click', '.dropdown-item', function (e) {
+                e.preventDefault();
+                var selectedCategory = $(this).attr('data-category');
+                console.log("selectedCategory is ", selectedCategory)
+                $("#dropdownMenuButton").text($(this).text());
+
                 $.ajax({
-                    url: '/Product/GetMainCategories',
+                    url: '/Product/GetSubCategories',
                     type: 'GET',
                     dataType: 'json',
-                    success: function (categories) {
-                        categories.forEach(function (category) {
-                            console.log(category)
-                            var option = $('<a class="dropdown-item" href="#" data-category="' + category + '">' + category + '</a>');
-                            $(".dropdown-menu").append(option);
+                    data: { mainCategoryId: selectedCategory },
+                    success: function (subcategories) {
+                        var subCategoryNames = [];
+                        var subCategoryId = {};
+                        subcategories.forEach(function (subcategory) {
+                            console.log("subcategories ", subcategory.Category_Name);
+                            subCategoryNames.push(subcategory.Category_Name);
+                            subCategoryId[subcategory.Category_Name] = subcategory.CategoriesID;
+                        })
+
+                        // Update the subcategories autocomplete with data
+                        /*var subCategoryNames = subcategories.map(function (sub) { return sub.Name; });*/
+                        /*var subCategoryNames = subcategories.Category_Name*/
+                        $("#SubCategory").autocomplete({
+                            source: subCategoryNames,
+                            select: function (event, ui) {
+                                $("#hiddenSubCategoryId").val(subCategoryId[ui.item.value]);
+                            }
                         });
                     }
                 });
-
-                // When main category is selected, fetch subcategories
-                $(document).on('click', '.dropdown-item', function (e) {
-                    e.preventDefault();
-                    var selectedCategory = $(this).attr('data-category');
-                    console.log("selectedCategory is ", selectedCategory)
-                    $("#dropdownMenuButton").text($(this).text());
-
-                    $.ajax({
-                        url: '/Product/GetSubCategories',
-                        type: 'GET',
-                        dataType: 'json',
-                        data: { mainCategoryId: selectedCategory },
-                        success: function (subcategories) {
-                            console.log("subcategories ", subcategories)
-                            // Update the subcategories autocomplete with data
-                            /*var subCategoryNames = subcategories.map(function (sub) { return sub.Name; });*/
-                            var subCategoryNames = subcategories
-                            $("#SubCategory").autocomplete({
-                                source: subCategoryNames
-                            });
-                        }
-                    });
-                });
-
-                $("#searchButton").click(function () {
-                    var mainCategory = $("#dropdownMenuButton").text();
-                    var SubCategory = $("#SubCategory").val();
-
-                    console.log("Main Category:", mainCategory);
-                    console.log("SubCategory:", SubCategory);
-
-                    // Additional code to make an AJAX call or form submission for the product search
-                });
-
-                $("#searchForm").submit(function () {
-                    var mainCategory = $("#dropdownMenuButton").text();
-
-                    $("#hiddenMainCategory").val(mainCategory);
-                });
             });
+
+            $("#searchButton").click(function () {
+                var mainCategory = $("#dropdownMenuButton").text();
+                var SubCategory = $("#SubCategory").val();
+                var SubCategoryId = $("#hiddenSubCategoryId").val();
+                console.log("Main Category:", mainCategory);
+                console.log("SubCategory:", SubCategory);
+                console.log("SubCategoryId:", SubCategoryId);
+
+            });
+
+            $("#searchForm").submit(function () {
+                var mainCategory = $("#dropdownMenuButton").text();
+
+                $("#hiddenMainCategory").val(mainCategory);
+            });
+        });
     </script>
 }
 
